force-app/main/default/objects/ServicesFees__c/ServicesFees__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070118 - Created for phase 1</description>
    <label>Services Fees</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Services Fees Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>