force-app/main/default/objects/ServicesFees__c/fields/FeeSchedule__c.field-meta.xml
<CustomField>
    <fullName>FeeSchedule__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Fee Schedule</label>
    <referenceTo>FeeSchedule__c</referenceTo>
    <relationshipLabel>Services Fees</relationshipLabel>
    <relationshipName>ServicesFees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>