force-app/main/default/objects/ServicesFees__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Services</label>
    <length>100</length>
    <type>Text</type>
</CustomField>